# Garmin-analyze

./: .gitignore  10-garmin project.code-workspace  AGENTS.md  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: ci.yml
docs/: 00_project_brief.md  01_requirements.md  02_data_contract.md  03_acceptance_tests.md  04_architecture.md  05_task_breakdown.md  06_mvp_freeze.md  06_release_candidate_validation.md  07_known_limitations.md  07_local_smoke_test.md  07_user_manual.md  08_local_ui_smoke_test.md  08_windows_launcher_and_packaging_readiness.md  09_windows_exe_packaging.md  10_final_release_checklist.md  activity_22959597033.tcx
packaging/: README.md  garmin-tcx-ai-cli.spec  garmin-tcx-ai-ui.spec  version_info.txt
scripts/: README.md  build_exe.manual.cmd  clean_packaging_artifacts.cmd  convert_tcx.py  run_cli_smoke.cmd  run_ui.cmd  run_validation.cmd  smoke_exe.manual.cmd
src/garmin_tcx_ai/: __init__.py  cli.py  credentials.py  exporters.py  handoff.py  models.py  normalizer.py  parser.py  pipeline.py  privacy.py  session.py  summary.py  ui_exe_launcher.py  ui_helpers.py  ui_streamlit.py
tests/: test_cli.py  test_cli_garminconnect_import.py  test_credentials.py  test_exporters.py  test_garminconnect_importer.py  test_handoff.py  test_models.py  test_normalizer.py  test_package_import.py  test_parser.py  test_parser_multilap.py  test_pipeline.py  test_privacy.py  test_session.py  test_summary.py  test_tcx_fixture.py  test_ui_exe_launcher.py  test_ui_helpers.py
(+6 files in other folders)
