[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-tcx-ai"
version = "0.1.0"
description = "Personal Garmin TCX ETL and analysis scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.56",
]

[project.optional-dependencies]
garminconnect = [
    "garminconnect",
    "curl_cffi",
    "keyring",
]

[project.scripts]
garmin-tcx-ai = "garmin_tcx_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py312"
